1. Add applications in report 2. Modify the bibliography path in rasl_literature_review.tex

--- a/summaries/rasl_literature_review.tex
+++ b/summaries/rasl_literature_review.tex
@@ -49,7 +49,7 @@ J_{i} \leftarrow \frac{\partial}{\partial\zeta}(D_{i}\circ\zeta)|_{\zeta = \tau_
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \bibliographystyle{abbrv}
-\bibliography{../../common/rasl_review}
+\bibliography{../common/rasl_review}
 
 \end{document}
 
