updated the report file, proof section, added KK's proofs and summary.

--- a/common/defs.tex
+++ b/common/defs.tex
@@ -102,4 +102,10 @@
 \newcommand{\Abar}{{\bar{A}}}
 
 
+\theoremstyle{plain}
+\newtheorem{thm}{Theorem}
+\theoremstyle{plain}
+\newtheorem{fact}[thm]{Fact}
+\theoremstyle{plain}
+\newtheorem{prop}[thm]{Proposition}
 
