--- a/report/report.tex
+++ b/report/report.tex
@@ -4,7 +4,7 @@
 %============================================================================================
 
 \title{\Large Robust Principal Component Analysis}
-\author{Maximilian Balandat \and Walid Krichene \and Chi Phang Lam \and Ka Kit Lam}
+\author{Maximilian Balandat \and Walid Krichene \and Chi Pang Lam \and Ka Kit Lam}
 
 %============================================================================================
 \begin{document}
