mini change to algorithms sec

--- a/report/algorithms/algorithms.tex
+++ b/report/algorithms/algorithms.tex
@@ -693,8 +693,7 @@ The PROPACK package has later also been modified to allow the computation of tho
 \label{Algorithms:Discussion:SVD:WarmstartSVD:Subsubsec}
 
 
-Another potential way of speeding up many SVD-based algorithms is to exploit the fact that the matrix of which the SVD has to be computed does generally not change much between iterations, in particular after a few iterations. To utilize this fact, the authors
-of~\cite{Lin:2010uq} propose a warm start technique for the block Lanczos method for SVD computation. 
+Another potential way of speeding up many SVD-based algorithms is to exploit the fact that the matrix of which the SVD has to be computed does generally not change much between iterations, in particular after a few iterations. To utilize this fact, the authors of~\cite{Lin:2010uq} propose a warm start technique for the block Lanczos method for SVD computation. 
 
 
 
